@@ -113,8 +113,8 @@ classdef L1L2
         % strange).
         error(...
           ['HK timestamps do not increase monotonically', ...
-          ' (USE_ZV_ACQUISITION_TIME_HK=%g).'], ...
-          USE_ZV_ACQUISITION_TIME_HK)
+          ' (USE_ZV_ACQUISITION_TIME_HK=%s).'], ...
+          string(USE_ZV_ACQUISITION_TIME_HK))
 
       end
       if ~irf.utils.ranges_intersect(InSci.Zv.Epoch, hkEpoch)
