@@ -31,9 +31,9 @@ classdef get_SWML___UTEST < matlab.unittest.TestCase
 
       %===================================================================
 
-      for l1l2Enabled = [0, 1]
-        for l2l2Enabled = [0, 1]
-          for l2l3Enabled = [0, 1]
+      for l1l2Enabled = [false, true]
+        for l2l2Enabled = [false, true]
+          for l2l3Enabled = [false, true]
             test(l1l2Enabled, l2l2Enabled, l2l3Enabled)
           end
         end
