@@ -566,9 +566,9 @@ if ~strictNumericZvSizePerRecord
   L.logf('warning', [...
     '========================================================================================================\n', ...
     'Permitting master CDF zVariable size per record to differ from the output CDF zVariable size per record.\n', ...
-    'This is due to setting %s = "%g"\n', ...
+    'This is due to setting %s = "%s"\n', ...
     '========================================================================================================\n'], ...
-    settingKey, strictNumericZvSizePerRecord);
+    settingKey, string(strictNumericZvSizePerRecord));
 end
 
 L.logf('info', 'Writing dataset CDF file: %s', outputFile)
